k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legac
  namespace: weci-holic
  labels:
    app: legac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legac
  template:
    metadata:
      labels:
        app: legac
    spec:
      containers:
        - name: legac
          image: dhnillhaq/legac:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
